--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URL= "mongodb+srv://raushan:raushanration@cluster0.i53bru1.mongodb.net/RaushanDB"
+MONGODB_URL= "mongodb+srv://raushanration:Raushan@cluster0.kdw3uin.mongodb.net/RationDB"
 JWT_SECRET= "raution"
